tests/snapshots/snapshot_screens__edit_relay_url_dialog.snap
---
source: tests/snapshot_screens.rs
description: Settings → select Relay URL
expression: output
---
                                 Edit Relay URL

Relay URL
┌ ✎ editing ───────────────────────────────────────────────────────────────────┐
│wss://relay.vauchi.app█                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
















[EDIT]   [Enter] Save  [Esc] Cancel  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
