tests/snapshots/snapshot_screens__group_detail.snap
---
source: tests/snapshot_screens.rs
description: Groups → press Enter on group
expression: output
---
                                     Family

┌ [#] Group Info ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  [-] Members                                                                 │
│      3                                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contacts (3) ────────────────────────────────────────────────────────────────┐
│▸ AS Abigale Schroeder                                                        │
│  AD Andreanne Doyle                                                          │
│  AN Ahmed Nikolaus                                                           │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Rename  [Enter] Delete Group  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │  4 ★ Groups   │    5 More
