tests/snapshots/snapshot_screens__group_detail_empty.snap
---
source: tests/snapshot_screens.rs
description: Groups → press Enter on empty group
expression: output
---
                                   Empty Group

┌ [#] Group Info ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  [-] Members                                                                 │
│      0                                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contacts ────────────────────────────────────────────────────────────────────┐
│  No contacts yet. Use Exchange to add one.                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘











[Enter] Rename  [Enter] Delete Group  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │  4 ★ Groups   │    5 More
