tests/snapshots/snapshot_screens__groups.snap
---
source: tests/snapshot_screens.rs
description: MyInfo → press Enter (Group View)
expression: output
---
                                     Groups

┌ View Mode ───────────────────────────────────────────────────────────────────┐
│ [x] Members                                                                  │
│     Which contacts are in each group                                         │
│ [ ] Visibility                                                               │
│     Which of your fields each group sees                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   group Family  3 members                                                    │
│   group Friends  4 members                                                   │
│   group Work  3 members                                                      │
└──────────────────────────────────────────────────────────────────────────────┘









[Space] select  [Enter] New Group  [Enter] Rename Group  [Enter] Delete Group
   1 My Card    │  2 Contacts   │  3 Exchange   │  4 ★ Groups   │    5 More
