tests/snapshots/snapshot_screens__help.snap
---
source: tests/snapshot_tests.rs
description: "MyInfo → press '5' (Help tab)"
expression: output
---
                                   Help & FAQ

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ • How do I add a contact?                                                  │
│   • How do I create a backup?                                                │
│   • How do I exchange contact cards?                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   • What is end-to-end encryption?                                           │
│   • How does social recovery work?                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   • How does Tor routing protect my privacy?                                 │
└──────────────────────────────────────────────────────────────────────────────┘








[?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │  4 Settings   │   5 ★ Help
