tests/snapshots/snapshot_screens__lock_screen.snap
---
source: tests/snapshot_tests.rs
description: app_start → app password configured
expression: output
---
                                 Enter Password

┌──────────────────────────────────────────────────────────────────────────────┐
│Password                                                                      │
│                                                                              │
│  ○ ○ ○ ○ ○ ○                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
