tests/snapshots/snapshot_screens__my_info_entry_detail.snap
---
source: tests/snapshot_screens.rs
description: MyInfo → press Enter on entry
expression: output
---
                                   Alice Smith

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘















[a] Add Entry  [Enter] Group View  [Enter] Preview as...  [?] help  [Esc] back
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
