tests/snapshots/snapshot_screens__privacy.snap
---
source: tests/snapshot_screens.rs
description: Settings → select Privacy & Data
expression: output
---
                                 Privacy & Data

┌ [-] Data Status ─────────────────────────────────────────────────────────────┐
│                                                                              │
│  Deletion Status                                                             │
│  No deletion requested                                                       │
│                                                                              │
│  Consent                                                                     │
│  Active                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   data View My Data  See what data is stored locally                         │
│   consent Manage Consent  Review and update data consent                     │
└──────────────────────────────────────────────────────────────────────────────┘








[Enter] Export Data  [x] Delete Identity  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
