tests/snapshots/snapshot_screens__recovery.snap
---
source: tests/snapshot_tests.rs
description: Settings → select Recovery
expression: output
---
                                 Social Recovery

┌ [-] Quorum Status ───────────────────────────────────────────────────────────┐
│                                                                              │
│  Trusted Contacts                                                            │
│  0 of 3                                                                      │
│                                                                              │
│  Quorum Met                                                                  │
│  No                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contacts ────────────────────────────────────────────────────────────────────┐
│  No contacts yet. Use Exchange to add one.                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘








[Enter] Check Status  [?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │ 4 ★ Settings  │    5 Help
